# solana-tile-test

./: Anchor.toml  fun.js  hexStuff.txt  package-lock.json  package.json
app/: .eslintrc.js  package-lock.json  package.json
app/src/: App.js  App.tsx  tile_test.json  tile_test.ts  tile_test_idl.json
app/src/tiles/: Tile.js  Tile.tsx  Tiles.js
app/src/util/: getProvider.tsx
app/src/util/components/: DisplayMessage.js  LoadingButton.js
notes/: worker.json
programs/tile-test/: Cargo.toml
programs/tile-test/src/: lib.rs
programs/tile-test/src/hexagon/: mod.rs
programs/workers/: Cargo.toml
programs/workers/src/: lib.rs
tests/: build.ts  testKey.json  testKey2.json  tile-test.ts  worker.ts
tests/utils/: createMintInfo.js  fetchTokenAccount.js  numberOfTilesCalculator.js
